--- a/index.ipynb
+++ b/index.ipynb
@@ -341,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "roma={name: roma, age:25, town: gravesend\"}"
+    "roma={name: roma, \"age\":25, \"town\": \"gravesend\"}"
    ]
   },
   {
