Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -341,7 +341,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "roma={name: \"roma, \"age\":25, \"town\": \"gravesend\"}"
+    "roma={\"name\": \"roma\", \"age\":25, \"town\": \"gravesend\"}\n",
+    "ro"
    ]
   },
   {
