Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -358,11 +358,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'roma',\n",
+       " 'age': 25,\n",
+       " 'town': 'gravesend',\n",
+       " 'schools': ['St Johns', 'Mayfield']}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "roma[\"schools\"] = [\"St Johns\", \"Mayfield\"]"
+    "roma[\"schools\"] = [\"St Johns\", \"Mayfield\"]\n",
+    "roma"
    ]
   },
   {
